--- a/test/css/main.css
+++ b/test/css/main.css
@@ -1743,7 +1743,7 @@ div.search {
     float:left;
     width:150px;
     height:150px;
-    border:1px solid #CDCDCD;
+    border:1px solid #EEEEEE;
     margin:10px 0px 0px 10px;
     background:#FFFFFF;
     background-position:center;
