--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -577,11 +577,20 @@ html,body{
     right:0px;
 }
 .ui-gadgets .ui-gadget-outer {
-    margin:10px 10px 0px 10px;
+    margin:10px 10px 0px 0px;
+    -moz-box-shadow: 0px 0px 8px #2D3B56;
+    -webkit-box-shadow: 0px 0px 8px #2D3B56;
+    box-shadow: 0px 0px 8px #2D3B56;
+    -moz-border-radius:3px;
+    -webkit-border-radius: 3px;
+    border-radius:3px;
+    padding:3px;
+    float:right;
 }
 .ui-gadgets .ui-gadget-inner {
     overflow:hidden;
     color:#666666;
+    padding:5px;
 }
 .ui-gadgets .ui-gadget-inner.chart {
     width:400px;
