--- a/lib/css/blackp.css
+++ b/lib/css/blackp.css
@@ -578,9 +578,6 @@ html,body{
 }
 .ui-gadgets .ui-gadget-outer {
     margin:10px 10px 0px 0px;
-    -moz-box-shadow: 0px 0px 8px #2D3B56;
-    -webkit-box-shadow: 0px 0px 8px #2D3B56;
-    box-shadow: 0px 0px 8px #2D3B56;
     -moz-border-radius:3px;
     -webkit-border-radius: 3px;
     border-radius:3px;
@@ -605,7 +602,7 @@ html,body{
 .ui-gadgets h2 {
     padding:10px;
     color:#FFFFFF;
-    background:#556F95;
+    border-bottom:1px solid #4E4E4E;
 }
 .ui-gadgets table {
     width:100%;
