--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1877,6 +1877,7 @@ div.search {
 .ui-event-calendar .cal-body .closing {
     border-top:1px solid #EBEBEB;
     margin-top:-1px;
+    position:relative;
 }
 .ui-event-calendar .cal-nav-left p {
     float: left;
