--- a/lib/css/blackp-icons.css
+++ b/lib/css/blackp-icons.css
@@ -85,6 +85,8 @@
 .page-white-word:before {background-image:url(../images/icons/file-word.svg);}
 .page-white-zip:before {background-image:url(../images/icons/file-archive.svg);}
 .page-white-put:before {background-image:url(../images/icons/file-unknown.svg);}
+.upload:before {background-image:url(../images/icons/upload.svg);}
+.download:before {background-image:url(../images/icons/download.svg);}
 .icon.add:before{content:'+';background:none;font-size:16px;color:#CDCDCD;line-height:21px;}
 .icon.minus:before{content:'-';background:none;font-size:16px;color:#CDCDCD;line-height:21px;}
 .icon.controls-last:before{content:'››';background:none;font-size:24px;color:#CDCDCD;line-height:21px;}
